<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity">

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_textview"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:textSize="18sp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_text"
            app:layout_constraintStart_toEndOf="@+id/name_label"
            app:layout_constraintBottom_toBottomOf="@+id/name_label"
            app:layout_constraintBaseline_toBaselineOf="@id/name_label"
            android:hint="@string/enter_your_name"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/name_label"
            android:autofillHints=""
            android:layout_toEndOf="@+id/name_label"/>

    <TextView
            android:text="@string/name_label_text"
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_textview"
            android:textSize="18sp"/>

    <TextView
            android:text="@string/address_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            android:layout_marginTop="24dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:textSize="18sp"
            android:id="@+id/address_text"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/address_label"
            app:layout_constraintBottom_toBottomOf="@+id/address_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
            android:hint="@string/enter_address_hint"/>

    <TextView
            android:text="@string/phone_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_label"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"/>

    <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:textSize="18sp"
            android:id="@+id/phone_text"
            app:layout_constraintStart_toEndOf="@+id/phone_label"
            app:layout_constraintBottom_toBottomOf="@+id/phone_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/enter_phone_hint"/>

    <TextView
            android:text="@string/note_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/note_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_label"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:gravity="start|top"
            android:ems="10"
            android:textSize="18sp"
            android:id="@+id/note_text"
            app:layout_constraintStart_toEndOf="@+id/note_label"
            app:layout_constraintBottom_toBottomOf="@+id/note_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/note_label"
            android:hint="@string/enter_note_hint"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/choose_delivery_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delivery_label"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/note_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery_label">

        <RadioButton
                android:id="@+id/sameday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/same_day_messenger_service" />

        <RadioButton
                android:id="@+id/nextday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/next_day_ground_delivery"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up" />
    </RadioGroup>

    <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phone_text"
            app:layout_constraintTop_toBottomOf="@+id/address_text" />



</androidx.constraintlayout.widget.ConstraintLayout>