<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/textintro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:src="@drawable/donut_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/donut"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textintro"
            android:contentDescription="@string/donuts"
            android:layout_marginTop="24dp"
            android:onClick="showDonutOrder"/>

    <ImageView
            android:src="@drawable/icecream_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ice_cream"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/donut"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:onClick="showIceCreamOrder"
            android:contentDescription="@string/ice_cream_sandwiches"/>

    <ImageView
            android:src="@drawable/froyo_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/froyo"
            android:onClick="showFroyoOrder"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ice_cream"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/froyo"/>

    <TextView
            android:text="@string/donuts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/donut_description"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/donut"
            app:layout_constraintTop_toTopOf="@+id/donut"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/ice_cream_sandwiches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ice_cream_description"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/ice_cream"
            app:layout_constraintTop_toTopOf="@+id/ice_cream"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"/>

    <TextView
            android:text="@string/froyo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/froyo_description"
            app:layout_constraintStart_toEndOf="@+id/froyo"
            app:layout_constraintTop_toTopOf="@+id/froyo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>